Better styling for login and added social login buttons

--- a/updeight/templates/login_form_panel.html
+++ b/updeight/templates/login_form_panel.html
@@ -2,6 +2,8 @@
 
 {% block form_content_class %}panel-body{% endblock form_content_class %}
 
-{% block form_oauth_class %}panel-body{% endblock form_oauth_class %}
+{% block form_body_class %}container-fluid{% endblock form_body_class %}
+
+{% block form_oauth_class %}container-fluid{% endblock form_oauth_class %}
 
 {% block form_buttons_class %}panel-body{% endblock form_buttons_class %}
