--- a/updeight/templates/h5bp.html
+++ b/updeight/templates/h5bp.html
@@ -20,6 +20,9 @@
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+        <!-- Font Awesome -->
+        <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -27,6 +30,9 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/bootstrap-material-design.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/h5bp.css' %}">
+
+        <!-- Social Authentication Styles -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/bootstrap-social.css' %}">
 
         <!-- Project Stylesheets -->
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
