--- a/updeight/templates/login_form.html
+++ b/updeight/templates/login_form.html
@@ -4,36 +4,42 @@
 {% get_providers as socialaccount_providers %}
 
 <form class="login form-horizontal" role="form" method="POST" action="{% url 'account_login' %}">
+
   <div class="{% block form_content_class %}{% endblock form_content_class %}">
-    {% crispy form %}
 
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-  </div>
-
-  <div class="{% block form_oauth_class %}{% endblock form_oauth_class %}">
+    <div class="{% block form_oauth_class %}{% endblock form_oauth_class %}">
     {% if socialaccount_providers %}
-    <p>{% blocktrans with site.name as site_name %}Please sign in with one
-    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-    <div class="socialaccount_ballot">
+      <div class="socialaccount_ballot">
+        <div class="socialaccount_providers text-center">
+          {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+        </div>
+      </div>
+      {% include "socialaccount/snippets/login_extra.html" %}
 
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
+      <div class="row hr-or">
+        <div class="col-xs-12 col-sm-6 col-md-12">
+          <hr class="hr-or-hr">
+          <span class="hr-or-span">{% trans 'or' %}</span>
+        </div>
+      </div>
 
-      <div class="login-or">{% trans 'or' %}</div>
-
+    {% endif %}
     </div>
 
-    {% include "socialaccount/snippets/login_extra.html" %}
+    <div class="{% block form_body_class %}{% endblock form_body_class %}">
+      {% crispy form %}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+    </div>
 
-    {% else %}
-    <p>{% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-    {% endif %}
+    <div class="text-center">
+    {% blocktrans %}
+      <span>Login or <a href="{{ signup_url }}">Sign Up</a></span>
+    {% endblocktrans %}
+    </div>
+
   </div>
 
   <div class="{% block form_buttons_class %}{% endblock form_buttons_class %}">
@@ -42,4 +48,5 @@
     <button class="btn btn-raised btn-default" type="button" data-dismiss="modal">{% trans "Cancel" %}</button>
     <button class="btn btn-raised btn-primary" type="submit">{% trans "Sign In" %}</button>
   </div>
+
 </form>
