--- a/updeight/templates/login_form_modal.html
+++ b/updeight/templates/login_form_modal.html
@@ -2,6 +2,8 @@
 
 {% block form_content_class %}modal-body{% endblock form_content_class %}
 
-{% block form_oauth_class %}modal-body{% endblock form_oauth_class %}
+{% block form_body_class %}row{% endblock form_body_class %}
+
+{% block form_oauth_class %}{% endblock form_oauth_class %}
 
 {% block form_buttons_class %}modal-footer{% endblock form_buttons_class %}
