--- a/updeight/templates/login_form.html
+++ b/updeight/templates/login_form.html
@@ -18,7 +18,7 @@
       {% include "socialaccount/snippets/login_extra.html" %}
 
       <div class="row hr-or">
-        <div class="col-xs-12 col-sm-6 col-md-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <hr class="hr-or-hr">
           <span class="hr-or-span">{% trans 'or' %}</span>
         </div>
@@ -28,25 +28,33 @@
     </div>
 
     <div class="{% block form_body_class %}{% endblock form_body_class %}">
-      {% crispy form %}
+      {% if login_form %}
+        {% crispy login_form %}
+      {% else %}
+        {% crispy form %}
+      {% endif %}
       {% if redirect_field_value %}
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
     </div>
 
     <div class="text-center">
-    {% blocktrans %}
-      <span>Login or <a href="{{ signup_url }}">Sign Up</a></span>
-    {% endblocktrans %}
+      <a class="btn btn-info" href="{% url 'account_reset_password' %}">
+        {% trans "forgot your password?" %}
+      </a>
+
+      <a class="btn btn-info" href="{{ signup_url }}">
+        {% trans 'create an account' %}
+      </a>
     </div>
 
   </div>
 
   <div class="{% block form_buttons_class %}{% endblock form_buttons_class %}">
-    <a class="btn btn-primary" href="{% url 'account_reset_password' %}">{% trans "Forgot Your Password?" %}</a>
 
     <button class="btn btn-raised btn-default" type="button" data-dismiss="modal">{% trans "Cancel" %}</button>
     <button class="btn btn-raised btn-primary" type="submit">{% trans "Sign In" %}</button>
+
   </div>
 
 </form>
