Fixed social auth icon styling and cleaned up some of CSS build

--- a/updeight/staticfiles/less/bootstrap-social.less
+++ b/updeight/staticfiles/less/bootstrap-social.less
@@ -56,7 +56,7 @@
   }
 }
 
-.btn.btn-social-icon {
+.btn-social-icon {
   .btn-social;
   height: (@bs-height-base + 2);
   width: (@bs-height-base + 2);
@@ -92,24 +92,24 @@
 }
 
 
-.btn.btn-social.btn-adn           { .btn-social(#d87a68); }
-.btn.btn-social.btn-bitbucket     { .btn-social(#205081); }
-.btn.btn-social.btn-dropbox       { .btn-social(#1087dd); }
-.btn.btn-social.btn-facebook      { .btn-social(#3b5998); }
-.btn.btn-social.btn-flickr        { .btn-social(#ff0084); }
-.btn.btn-social.btn-foursquare    { .btn-social(#f94877); }
-.btn.btn-social.btn-github        { .btn-social(#444444); }
-.btn.btn-social.btn-google        { .btn-social(#dd4b39); }
-.btn.btn-social.btn-instagram     { .btn-social(#3f729b); }
-.btn.btn-social.btn-linkedin      { .btn-social(#007bb6); }
-.btn.btn-social.btn-microsoft     { .btn-social(#2672ec); }
-.btn.btn-social.btn-odnoklassniki { .btn-social(#f4731c); }
-.btn.btn-social.btn-openid        { .btn-social(#f7931e); }
-.btn.btn-social.btn-pinterest     { .btn-social(#cb2027); }
-.btn.btn-social.btn-reddit        { .btn-social(#eff7ff, #000); }
-.btn.btn-social.btn-soundcloud    { .btn-social(#ff5500); }
-.btn.btn-social.btn-tumblr        { .btn-social(#2c4762); }
-.btn.btn-social.btn-twitter       { .btn-social(#55acee); }
-.btn.btn-social.btn-vimeo         { .btn-social(#1ab7ea); }
-.btn.btn-social.btn-vk            { .btn-social(#587ea3); }
-.btn.btn-social.btn-yahoo         { .btn-social(#720e9e); }
+.btn-adn           { .btn-social(#d87a68); }
+.btn-bitbucket     { .btn-social(#205081); }
+.btn-dropbox       { .btn-social(#1087dd); }
+.btn-facebook      { .btn-social(#3b5998); }
+.btn-flickr        { .btn-social(#ff0084); }
+.btn-foursquare    { .btn-social(#f94877); }
+.btn-github        { .btn-social(#444444); }
+.btn-google        { .btn-social(#dd4b39); }
+.btn-instagram     { .btn-social(#3f729b); }
+.btn-linkedin      { .btn-social(#007bb6); }
+.btn-microsoft     { .btn-social(#2672ec); }
+.btn-odnoklassniki { .btn-social(#f4731c); }
+.btn-openid        { .btn-social(#f7931e); }
+.btn-pinterest     { .btn-social(#cb2027); }
+.btn-reddit        { .btn-social(#eff7ff, #000); }
+.btn-soundcloud    { .btn-social(#ff5500); }
+.btn-tumblr        { .btn-social(#2c4762); }
+.btn-twitter       { .btn-social(#55acee); }
+.btn-vimeo         { .btn-social(#1ab7ea); }
+.btn-vk            { .btn-social(#587ea3); }
+.btn-yahoo         { .btn-social(#720e9e); }
