--- a/updeight/staticfiles/less/updeight.less
+++ b/updeight/staticfiles/less/updeight.less
@@ -1,11 +1,13 @@
 
-/* Bootstrap */
-@import "bootstrap/bootstrap.less";
+// Bootstrap v3.3.7
+@import (reference) "bootstrap/bootstrap.less";
 
-/* Bootstrap Material Design */
-@import "material-design/bootstrap-material-design.less";
-@import "material-design/ripples.less";
-@import "bootstrap-social.less";
+/* Material Design for Bootstrap (+ripples) */
+@import "material/bootstrap-material-design.less";
+@import "material/ripples.less";
 
-/* Project Styles */
+/* Social Auth Buttons for Bootstrap */
+@import "bootstrap-social-material.less";
+
+/* Core Project Styles */
 @import "main.less";
