--- a/updeight/templates/nav.html
+++ b/updeight/templates/nav.html
@@ -38,25 +38,12 @@
   </div>
 
   <div class="progress navbar-progress">
-    <div class="progress-bar progress-bar-warning" style="width: 100%;"></div>
+    <div class="progress-bar progress-bar-info" style="width: 100%;"></div>
   </div>
 </nav>
 
 <div class="navbar-fixed-spacer"></div>
 
 {% if render_login_modal %}
-<div class="modal fade" id="login-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 class="modal-title">Sign In</h3>
-      </div>
-
-      {% include 'login_form_modal.html' %}
-
-    </div>
-  </div>
-</div>
+  {% include 'login_form_modal.html' %}
 {% endif %}
